force-app/main/default/objects/Worker_Schedule__c/Worker_Schedule__c.object-meta.xml
<CustomObject>
    <label>Worker Schedule</label>
    <nameField>
        <displayFormat>WS-{0}</displayFormat>
        <label>Work Schedule</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Worker Schedules</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>