force-app/main/default/objects/Worker_Schedule__c/fields/DayWorked__c.field-meta.xml
<CustomField>
    <fullName>DayWorked__c</fullName>
    <label>DayWorked</label>
    <type>Date</type>
</CustomField>