force-app/main/default/objects/Worker_Schedule__c/fields/Franchise__c.field-meta.xml
<CustomField>
    <fullName>franchise__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>franchise</label>
    <referenceTo>franchise__c</referenceTo>
    <relationshipLabel>worker schedules</relationshipLabel>
    <relationshipName>worker_schedules</relationshipName>
    <type>Lookup</type>
</CustomField>