force-app/main/default/objects/Worker_Schedule__c/fields/HoursWorked__c.field-meta.xml
<CustomField>
    <fullName>HoursWorked__c</fullName>
    <label>HoursWorked</label>
    <length>2</length>
    <type>Text</type>
</CustomField>