force-app/main/default/objects/Worker_Schedule__c/fields/tardy__c.field-meta.xml
<CustomField>
    <fullName>tardy__c</fullName>
    <defaultValue>false</defaultValue>
    <label>tardy</label>
    <type>Checkbox</type>
</CustomField>