force-app/main/default/objects/Worker_Schedule__c/fields/Worker__c.field-meta.xml
<CustomField>
    <fullName>Worker__c</fullName>
    <label>Worker</label>
    <referenceTo>Worker__c</referenceTo>
    <relationshipLabel>Worker Schedules</relationshipLabel>
    <relationshipName>Worker_Schedules</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>