force-app/main/default/objects/Worker_Schedule__c/fields/Workers__c.field-meta.xml
<CustomField>
    <fullName>Workers__c</fullName>
    <label>Workers</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Worker Schedules</relationshipLabel>
    <relationshipName>Worker_Schedules</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>